fix model typo. update app

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
 
 </head>
@@ -124,6 +125,7 @@
         crossorigin="anonymous"></script>
     <script src="https://cdn.tiny.cloud/1/l4xkqsaf1p3rjgl2vafehyux08etaphukuvyqzu7x5k4pjhx/tinymce/5/tinymce.min.js"
         referrerpolicy="origin"></script>
+    <script>src = "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/js/all.min.js"</script>
     <script>
         tinymce.init({
             skin: "bootstrap",
